--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -4,8 +4,6 @@
 .Input {
   width: 600px;
   height: 80px;
-  /* left: 1260px;
-  top: 100px; */
   border: none;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
@@ -14,10 +12,13 @@
   font-weight: normal;
   font-size: 48px;
   line-height: 56px;
+
+  background-image: url('../');
 }
 
-.Input:focus {
-  border: #2196f3;
+.Input:focus,
+.Input:hover {
+  border: 5px solid #2196f3;
 }
 
 .Icon {
