--- a/src/components/CountryTable/CountryTable.module.css
+++ b/src/components/CountryTable/CountryTable.module.css
@@ -3,10 +3,9 @@
   width: 100%;
 }
 .Table thead {
-  /* margin-bottom: 20px; */
   background: #2196f3;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-
+  border-radius: 20px;
   font-weight: bold;
   font-size: 24px;
   line-height: 28px;
@@ -20,11 +19,11 @@
   width: 560px;
   border-radius: 0 20px 20px 0;
 }
+
 .Table tbody {
   margin-top: 20px;
   background: #ffffff;
   border-radius: 20px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 
   font-weight: bold;
   font-size: 24px;
